refactor: move config to src/config and update imports to use path aliases
